# sijishe_auto_checkin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: main.rs
