[package]
name = "sijishe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
scraper = "0.26.0"
reqwest = { version = "0.13", features = ["cookies", "form"] }
base64 = "0.22"
md5 = "0.8"
rand = "0.10"
tokio-retry = "0.3"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
regex = "1.12.3"
