[package]
name = "sijishe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
scraper = "0.26.0"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "cookies", "form"] }
md5 = "0.8"
rand = "0.10"
tokio-retry = "0.3"
dirs = "6.0.0"
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
clap_complete = "4.6.3"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
